--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_fonts: ^6.3.1
   flutter_screenutil: ^5.9.3
   fluttertoast: ^8.2.12
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
