--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   bloc: ^9.0.0
   injectable_generator: ^2.8.1
+  cached_network_image: ^3.4.1
 
 
 dev_dependencies:
